adding some datasets from O'Reilly book

--- a/pom.xml
+++ b/pom.xml
@@ -88,8 +88,10 @@
         <version>3.8.1</version>
         <configuration>
           <!-- Neo4j Procedures require Java 8 -->
-          <source>1.8</source>
-          <target>1.8</target>
+          <!--source>1.8</source-->
+          <!--target>1.8</target-->
+          <source>11</source>
+          <target>11</target>
         </configuration>
       </plugin>
       <plugin>
